--- a/leisure/src/main/resources/templates/leisure/index.html
+++ b/leisure/src/main/resources/templates/leisure/index.html
@@ -7,9 +7,9 @@
   <title>Leisuri Imóveis</title>
   <link rel="icon" type="image/x-icon" th:href="@{/imagem/leisuriLogo.png}">
   <meta name="viewport" content="width=device-width">
-  <!-- ESTILOS------------------------------------------------------------------ -->
-    <!-- SCROLL REVEAL -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+  <!-- ESTILOS -->
+  <!-- SCROLL REVEAL -->
+  <!-- <script src="https://unpkg.com/scrollreveal"></script> -->
   <!-- -ESTILOS -->
   <!-- BOOTSTRAP CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -68,22 +68,22 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#sobre">Sobre</a>
+              <a class="nav-link" th:href="@{/leisure/index#sobre}">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#servicos-area">Serviços</a>
+              <a class="nav-link" th:href="@{/leisure/index#servicos-area}">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#time-area">Time</a>
+              <a class="nav-link" th:href="@{/leisure/index#time-area}">Time</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#">Anunciar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#bottomMenu">Contatos</a>
+              <a class="nav-link" th:href="@{/leisure/index#bottomMenu}">Contatos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="faq.html">Duvidas</a>
+              <a class="nav-link" th:href="@{/leisure/faq#duvidas}">Duvidas</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Download</a>
@@ -128,19 +128,19 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#sobre">Sobre</a>
+              <a class="nav-link" th:href="@{/leisure/index#sobre}">Sobre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#servicos-area">Serviços</a>
+              <a class="nav-link" th:href="@{/leisure/index#servicos-area}">Serviços</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#time-area">Time</a>
+              <a class="nav-link" th:href="@{/leisure/index#time-area}">Time</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#bottomMenu">Contatos</a>
+              <a class="nav-link" th:href="@{/leisure/index#bottomMenu}">Contatos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="faq.html">Duvidas</a>
+              <a class="nav-link" th:href="@{/leisure/faq#duvidas}">Duvidas</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Download</a>
@@ -461,16 +461,16 @@
   </div>
 <!-- RODAPÉ -->
   <div class="container mt-5">
-    <footer class="py-5">
+    <footer id="bottomMenu" class="py-5">
       <div class="row">
         <div class="col-6 col-md-2 mb-3">
           <h5>Sessões</h5>
           <ul class="nav flex-column d-inline-block">
             <li class="nav-item mb-2"><a th:href="@{/leisure/index}" class="nav-link p-0 text-body-secondary">Home</a></li>
-            <li class="nav-item mb-2"><a th:href="@{/index.html#sobre}" class="nav-link p-0 text-body-secondary">Sobre</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Serviços</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Time</a></li>
-            <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Dúvidas</a></li>
+            <li class="nav-item mb-2"><a th:href="@{/leisure/index#sobre}" class="nav-link p-0 text-body-secondary">Sobre</a></li>
+            <li class="nav-item mb-2"><a th:href="@{/leisure/index#servicos-area}" class="nav-link p-0 text-body-secondary">Serviços</a></li>
+            <li class="nav-item mb-2"><a th:href="@{/leisure/index#time-area}" class="nav-link p-0 text-body-secondary">Time</a></li>
+            <li class="nav-item mb-2"><a th:href="@{/leisure/faq#duvidas}" class="nav-link p-0 text-body-secondary">Dúvidas</a></li>
           </ul>
         </div>
   
@@ -533,8 +533,6 @@
         </div>
         <div class="modal-body">
           <!-- FORM LOGIN -->
-
-          
           <form class="row g-3" action="/usuario/login" method="post">
             <div class="col-md-7 mx-auto">
               <label for="inputEmail4" class="form-label">Email</label>
@@ -548,7 +546,6 @@
             <div class="mx-auto">
               <button type="submit" class="btn btn-success mt-5 mb-3">Entrar</button>
               <button type="button" class="btn btn-primary login-btn mt-5 mb-3" data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">Não tenho Cadastro</button>
-
             </div>
           </form>
       </div>
